se agrega informacion de la ciudad

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Document</title>
  </head>
   <body>
-      <h1>hola</h1>   
-      <h2>hola</h2>
-      <h3>hola</h3>
-      <h4>hola</h4>
-      <h5>hola</h5>
-      <h6>hola</h6>
+      <h1>Nueva York</h1> 
+     <p>Nueva York  la ciudad que nunca duerme por su constante movimiento
+     </p>  
+      
   </body>
  </html>
