--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <h1>Nueva York</h1> 
      <p>Nueva York  la ciudad que nunca duerme por su constante movimiento
      </p>  
-      
+      <img src="https://th.bing.com/th/id/OIP.3-MtY0_ymmOznQEKMcLQ3QHaFj?w=208&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="puente de brooklyn">
+
   </body>
  </html>
