cambio de descripcion

--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
- </head>
-  <body>
-      <h1>Nueva York</h1> 
-     <p>Nueva York  la ciudad que nunca duerme por su constante movimiento
-     </p>  
-      <img src="https://th.bing.com/th/id/OIP.3-MtY0_ymmOznQEKMcLQ3QHaFj?w=208&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="puente de brooklyn">
+  </head>
 
+  <body>
+    <h1>NUEVA YORK</h1>
+    <p>Nueva York es conocida como la ciudad que nunca duerme (the city that never sleeps). es una de las ciudades mas emblematicas y vibrantes del mundo, conocida por su energia, diversidad, culturay actividad constante</p>
+    
+    <img
+      src="https://th.bing.com/th/id/OIP.3-MtY0_ymmOznQEKMcLQ3QHaFj?w=208&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3"
+      alt="puente de brooklyn"
+    />
+    <H2>LUGARES MAS POPULARES</H2> 
+    <ol>
+      <li><b>CENTRAL PARK:</b> un pulmon verde en medio de la ciudad, perfecto para relajarse y disfrutar del aire libre</li>
+      <li><b>BRODWAY:</b>Se considera la calle mas famosa para ver musicales y teatro en nueva york</li>
+      <li><b>TIMES SQUARE:</b>El corazon turistico de nueva york conocido por sus luces neon y carteles publicitarios</li>
+</ol>
+     <img 
+     src="https://th.bing.com/th/id/OIP.LW1dItKc6v-7LSkHxE5-YAHaJb?w=127&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3"
+     alt="BRODWAY"
+     />
+     
+    <!-- pruebas de comandos para comentarios -->
   </body>
- </html>
+</html>
