se realizaron cambios en css y html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
 </head>
 
 <body>
-  <header>
+
+  <div class="menu">
+    <div>
+      <img
+      class=logo-img
+      src="//www.nicepng.com/png/full/338-3384104_logo-replikat-innovacion-imagen-negro-transparente-logos-con.png" 
+      alt="logopng">
+    </div>
+    <div class="botones-menu">
+      <ul>
+        <li>Inicio</li>
+        <li>Nosotros</li>
+        <li>Contacto</li>
+      </ul> 
+
+    </div>
+  </div>
+  <section class="bloqueuno">
     <h1 class="titulo1">Nueva York</h1> 
-  </header>
-  <main>
     <p class="parrafo1">Nueva York es una de las ciudades más emblemáticas y fascinantes del mundo. Su vibrante energía y su riqueza
       cultural la convierten en un lugar único e inigualable. ¿Qué es lo que hace especial a esta gran metrópoli?
       En primer lugar, Nueva York es un crisol de culturas. Se dice que allí conviven más de 800 lenguas diferentes. Es
@@ -22,8 +37,10 @@
       Chrysler Building, el One World Trade Center y muchos más son algunos de los íconos arquitectónicos que la ciudad
       presenta al mundo. Además, la panorámica de la ciudad desde lo alto de estos edificios es impresionante.
     </p>
-  </main>
-  <img  class="ciudad noche" src="https://www.travelholics.es/pics/2023/04/13/caracteristicas-unicas-de-nueva-york.png" alt="ciudad de Nueva York">
+    <img src="https://www.travelholics.es/pics/2023/04/13/caracteristicas-unicas-de-nueva-york.png" alt="ciudad de Nueva York" class="ciudad-noche">
+  </section>
+
+
   <h2 class="subtitulo">¿Qué ver en Nueva York?</h2>
   <ul class="lista-lugares">
     <li>Times Square: El corazón de la ciudad, lleno de luces y vida.</li>
