se realizaron cambios de color y se agrearon nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <div>
     <h1 class="titulo1">Luz y amor</h1>
     <div class="parrafo1">
-      <p>la esperanza es la luz que ilumina el camino en los momentos oscuro, y el amor es la fuerza que nos une y nos impulsa a seguir adelante, juntos, forman un poderoso motor que nos guia hacia un futuro lleno de posibilidades</p>
+      <p>creamos veladoras personalizadas para hacer que tus momentos especiales sean aún más inolvidables. Desde veladoras para cumpleaños hasta veladoras para bodas, tenemos una variedad de diseños y opciones para que puedas elegir la que mejor se adapte a tus necesidades."
+</p>
     </div>
     <div class="busqueda">
       <input type="text" placeholder="Buscar...">
@@ -38,13 +39,13 @@
     </div>
   </div>
   <div> 
-    <img src="imagenes/img7.jpg" alt="vela cafe" class="imagen1">
+    <img src="imagenes/img12.jpg" alt="vela cafe" class="imagen1">
   </div>
 </div>
-   
+
   <h2 class="subtitulo">¿Quienes Somos? </h2>
   <div class="quienes-somos">
-    <p>Somos una empresa dedicada a la creación de productos artesanales que aportan luz y amor a tu hogar. Nuestra misión es ofrecer artículos únicos que transformen espacios y generen bienestar.</p>
+     <p>Somos una empresa dedicada a la creación de productos artesanales que aportan luz y amor a tu hogar. Nuestra misión es ofrecer artículos únicos que transformen espacios y generen bienestar.</p>
   </div>
 
   <div>
@@ -97,7 +98,11 @@
     <p>Recomiendo totalmente esta tienda, el set de spa es increíble.</p>
     <p>⭐⭐⭐⭐⭐</p>
   </div>
+</div>
 
+<div class="envio-info">
+  <span>Contamos con envío</span>
+  <img src="imagenes/envios.jpg" alt="Envío" class="icono-envio">
 </div>
 
 
@@ -120,20 +125,25 @@
     </div>
   </section>
 
-<footer>
-  <div class="social-icons">
-    <a>
-      <img src="imagenes/png-transparent-computer-icons-facebook-logo-facebook-logo-fine-art-thumbnail.png" alt="Facebook">
+  <footer>
+  <p>&copy; 2025 My Web Page</p>
+  <div class="redes-sociales">
+    <a href="https://facebook.com" target="_blank">
+      <img src="imagenes/png-transparent-computer-icons-facebook-logo-facebook-logo-fine-art-thumbnail.png" alt="Facebook" class="icono-red">
     </a>
-    <a>
-      <img src="imagenes/twitter.webp" alt="Twitter">
+    <a href="https://instagram.com" target="_blank">
+      <img src="imagenes/instagram.png" alt="Instagram" class="icono-red">
     </a>
-    <a>
-      <img src="imagenes/instagram.png" alt="Instagram">
+    <a href="https://twitter.com" target="_blank">
+      <img src="imagenes/twitter.webp" alt="Twitter" class="icono-red">
     </a>
+    <a href="https://wa.me/" target="_blank">
+      <img src="imagenes/whatss.jpg" alt="WhatsApp" class="icono-red">
+    </a>
+    <a href="#" class="terminos">Términos y condiciones</a>
+     <a href="#" class="soporte">Soporte</a>
   </div>
 </footer>
-
 </body>
 </html>
 
