se agrego la opcion de nosotros con parrafo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Web Page</title>
+  <title>Luz y Amor</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,8 +19,8 @@
     </div>
     <div class="botones-menu">
       <ul>
-        <li>Inicio</li>
-        <li>¿Quienes Somos?</li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="nosotros.html">¿Quienes Somos?</a></li>
         <li>Productos</li>
         <li>Contacto</li>
       </ul> 
@@ -102,7 +102,7 @@
 
 <div class="envio-info">
   <span>Contamos con envío</span>
-  <img src="imagenes/envios.jpg" alt="Envío" class="icono-envio">
+  <img src="imagenes/envios.png" alt="Envío" class="icono-envio">
 </div>
 
 
