--- a/nosotros.html
+++ b/nosotros.html
@@ -21,8 +21,8 @@
       <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="nosotros.html">¿Quienes Somos?</a></li>
-        <li>Productos</li>
-        <li>Contacto</li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul> 
     </div>
   </div>
